Fixed Overflowing Content Titles

--- a/themes/equippedyouth/static/css/style.css
+++ b/themes/equippedyouth/static/css/style.css
@@ -127,7 +127,7 @@
     }
 
     .content-title {
-        max-width: 80%;
+        max-width: 600px;
     }
 
     #offcanvas-nav li {
